fix: saved resources unique id, add preview image name to db, remove image on delete and update resource
